--- a/scss/style.css
+++ b/scss/style.css
@@ -4,34 +4,32 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Teko";
+  font-family: "Teko", sans-serif;
 }
 
 @media only screen and (max-width: 768px) {
-  #logo {
-    width: 39.71px;
-    height: 38.05px;
+  .navbar-brand h2 {
+    display: inline;
+    text-transform: uppercase;
+    margin-left: 10px;
   }
-  .navbar-toggler {
-    width: 38px;
-    height: 38px;
+  .navbar-dark .navbar-toggler {
+    width: 39px;
+    height: 39px;
     border-radius: 50%;
     background-color: #f2a60c;
-    z-index: 0;
+  }
+  .navbar-dark .navbar-toggler .navbar-toggler-icon {
+    left: -8px;
+    right: 0;
     position: relative;
   }
-  .navbar-toggler .navbar-toggler-icon {
-    z-index: 2;
-    color: white;
-    position: relative;
-    right: 9px;
-    width: 30px;
-  }
-  .btn-weird {
-    width: 38px;
-    height: 38px;
+  #dialtone {
+    width: 39px;
+    height: 39px;
     border-radius: 50%;
     background-color: #f2a60c;
+    border: none;
   }
   .container-mobile {
     width: 100%;
@@ -56,13 +54,18 @@
     -ms-flex-line-pack: center;
         align-content: center;
   }
+  .container-mobile img {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
   .container-mobile h1 {
-    font-size: 72px;
+    font-size: 90px;
     font-weight: 700;
     color: white;
     position: absolute;
     text-align: center;
     text-transform: uppercase;
+    line-height: 70px;
   }
   .container-mobile h1 span {
     color: #f2a60c;
@@ -75,6 +78,225 @@
   }
   .container-mobile h6 span {
     color: #f2a60c;
+  }
+  .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    margin-bottom: 30px;
+  }
+  .container .subheader-icons {
+    border: 1px solid lightgrey;
+    border-radius: 15px;
+    max-width: 108px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .container .subheader-icons img {
+    background-position: cover;
+    max-width: 80px;
+    max-height: 64px;
+    -webkit-filter: brightness(40%);
+            filter: brightness(40%);
+  }
+  #menu .menu-item-wrap {
+    position: relative;
+  }
+  #menu .menu-item-wrap .yellow-circle-menu {
+    margin: auto;
+    -ms-flex-item-align: center;
+        align-self: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+  }
+  #menu .menu-item-wrap .yellow-circle-menu .yellow-circle {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    position: absolute;
+    width: 177px;
+    height: 177px;
+    background-color: #f2a60c;
+    border-radius: 50%;
+  }
+  #menu .menu-item-wrap .yellow-circle-menu .yellow-circle h1 {
+    font-size: 40px;
+    font-family: "Teko";
+    text-transform: uppercase;
+    color: white;
+    margin-top: 15px;
+  }
+  #coctails {
+    margin-bottom: 45px;
+  }
+  .container-fluid.signature-dishes .heading-dishes h1 {
+    font-size: 40px;
+    font-weight: 600;
+    margin-top: 50px;
+    text-transform: uppercase;
+    text-align: center;
+  }
+  .container-fluid.signature-dishes .heading-dishes h1 span {
+    color: #f2a60c;
+  }
+  .container-fluid.signature-dishes .heading-dishes h1 hr {
+    width: 50px;
+    border: 2px solid orangered;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -webkit-filter: none;
+            filter: none;
+    margin: auto;
+    border-radius: 20%;
+    margin-bottom: 50px;
+  }
+  .container-fluid.signature-dishes .signature-card-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-shadow: 1px 1px 12px lightgrey;
+            box-shadow: 1px 1px 12px lightgrey;
+    border-radius: 20px;
+    margin-bottom: 60px;
+  }
+  .container-fluid.signature-dishes .signature-card-wrap h2 {
+    text-align: center;
+    text-transform: uppercase;
+    padding: 25px 0;
+    font-weight: 600;
+  }
+  .container-fluid.signature-dishes button {
+    width: 80%;
+    height: 50px;
+    background: #f2a60c;
+    color: white;
+    border-radius: 20px;
+    border: none;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+  .vegan-card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    background: black;
+    border-radius: 20px;
+    margin-bottom: 20px;
+  }
+  .vegan-card h1 {
+    margin-top: 81px;
+    color: white;
+    text-align: center;
+  }
+  .vegan-card hr {
+    width: 50px;
+    border: 2px solid #f2a60c;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    -webkit-filter: none;
+            filter: none;
+    margin: auto;
+    border-radius: 20%;
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
+  .vegan-card h6 {
+    color: grey;
+    margin-bottom: 40px;
+    font-weight: 300;
+  }
+  .vegan-card .veg-button {
+    border-radius: 20px;
+    width: 130px;
+    height: 30px;
+    background: #f2a60c;
+    color: white;
+    border: none;
+    margin-bottom: 71px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
   }
 }
 /*# sourceMappingURL=style.css.map */
