--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -29,12 +29,11 @@
   ////////// hero ////////@at-root
 
   .container-mobile {
-    width: 100%;
-    height: 100%;
     margin: 0;
     padding: 0;
     @include flexCenter(column, wrap);
     img {
+      width: 100%;
       object-fit: cover;
     }
     h1 {
@@ -83,7 +82,12 @@
   #menu {
     .menu-item-wrap {
       position: relative;
+      width: 100%;
+      & > img {
+        width: 100%;
+      }
       .yellow-circle-menu {
+        width: 100%;
         margin: auto;
         align-self: center;
         @include flexCenter(column, nowrap);
@@ -151,8 +155,8 @@
       }
       margin-bottom: 60px;
     }
-    button {
-      width: 80%;
+    & button {
+      width: 230px;
       height: 50px;
       background: $myellow;
       color: white;
@@ -161,6 +165,7 @@
       font-size: 15px;
       text-transform: uppercase;
       letter-spacing: 2px;
+      margin-bottom: 50px;
     }
   }
 
@@ -189,7 +194,7 @@
       margin-bottom: 40px;
       font-weight: 300;
     }
-    .veg-button {
+    .veg-button > button {
       border-radius: 20px;
       width: 130px;
       height: 30px;
@@ -201,7 +206,23 @@
       letter-spacing: 1px;
     }
   }
+  .menu-button {
+    @include flexCenter(column, nowrap);
+    & > button {
+      width: 330px;
+    }
+  }
 
+  .comment-section {
+    .comment-wrapper {
+      background: url("../src/images/vector.png") center / cover;
+      
+    }
+  }
+
+  hr {
+    opacity: 1;
+  }
   ////end of line/////
 }
 ////end of line/////
