--- a/scss/style.css
+++ b/scss/style.css
@@ -32,8 +32,6 @@
     border: none;
   }
   .container-mobile {
-    width: 100%;
-    height: 100%;
     margin: 0;
     padding: 0;
     display: -webkit-box;
@@ -55,6 +53,7 @@
         align-content: center;
   }
   .container-mobile img {
+    width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
   }
@@ -118,8 +117,13 @@
   }
   #menu .menu-item-wrap {
     position: relative;
+    width: 100%;
+  }
+  #menu .menu-item-wrap > img {
+    width: 100%;
   }
   #menu .menu-item-wrap .yellow-circle-menu {
+    width: 100%;
     margin: auto;
     -ms-flex-item-align: center;
         align-self: center;
@@ -232,7 +236,7 @@
     font-weight: 600;
   }
   .container-fluid.signature-dishes button {
-    width: 80%;
+    width: 230px;
     height: 50px;
     background: #f2a60c;
     color: white;
@@ -241,6 +245,7 @@
     font-size: 15px;
     text-transform: uppercase;
     letter-spacing: 2px;
+    margin-bottom: 50px;
   }
   .vegan-card {
     display: -webkit-box;
@@ -287,7 +292,7 @@
     margin-bottom: 40px;
     font-weight: 300;
   }
-  .vegan-card .veg-button {
+  .vegan-card .veg-button > button {
     border-radius: 20px;
     width: 130px;
     height: 30px;
@@ -297,6 +302,34 @@
     margin-bottom: 71px;
     text-transform: uppercase;
     letter-spacing: 1px;
+  }
+  .menu-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .menu-button > button {
+    width: 330px;
+  }
+  .comment-section .comment-wrapper {
+    background: url("../src/images/vector.png") center/cover;
+  }
+  hr {
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=style.css.map */
