--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -214,9 +214,180 @@
   }
 
   .comment-section {
+    background: #f8f8f8;
+    padding-top: 40px;
+    border: 2px solid white;
+
     .comment-wrapper {
-      background: url("../src/images/vector.png") center / cover;
-      
+      @include flexCenter(column, nowrap);
+      background: white;
+      border-radius: 20px;
+      border: 2px solid white;
+      position: relative;
+      height: 320px;
+      margin-bottom: 30px;
+      .smiley {
+        position: absolute;
+        background-size: cover;
+        width: 220px;
+        height: 220px;
+        margin: auto;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+      }
+      .face-icon {
+        position: absolute;
+        top: 20px;
+        left: 0;
+        right: 0;
+        margin: auto;
+      }
+      .yellow-dots {
+        position: absolute;
+        right: 0;
+        top: 20px;
+      }
+      p {
+        display: inline-block;
+        width: auto;
+        margin-top: 150px;
+        text-align: center;
+        align-self: center;
+        justify-self: center;
+        border-collapse: separate;
+        border-right: 4px solid $myellow;
+        border-left: 4px solid $myellow;
+        padding: 16px 30px;
+        font-size: 25px;
+      }
+      h6 {
+        font-family: "Blinker", sans-serif;
+        text-align: center;
+        font-size: 1em;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 1.6px;
+        color: $myellow;
+      }
+      h2 {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 2em;
+        font-weight: 500;
+        span {
+          color: $myellow;
+        }
+      }
+    }
+  }
+  ///////////////////  night section happening //////////@at-root
+
+  .night-happening .card-wrap-night {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    .yellow-circle-night {
+      display: flex;
+      width: 170px;
+      height: 170px;
+      background: $myellow;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      border-radius: 50%;
+      h3 {
+        margin: auto;
+        text-align: center;
+        text-transform: uppercase;
+        color: white;
+        font-size: 0.8em;
+        letter-spacing: 2px;
+        font-weight: 700;
+        font-family: "Blinker", sans-serif;
+      }
+    }
+    //// dark section ////@at-root
+  }
+  .black-card-nigh-wrap {
+    background-color: black;
+    h1 {
+      padding-top: 150px;
+      text-align: center;
+      color: white;
+      text-transform: uppercase;
+      hr {
+        width: 50px;
+        margin: auto;
+        margin-top: 13px;
+        height: 3px;
+        color: $myellow;
+      }
+      span {
+        color: $myellow;
+        margin-left: 20px;
+      }
+    }
+    p {
+      color: white;
+      margin: 10px 34px 0 34px;
+      font-family: "Bliner", sans-serif;
+      font-size: 15px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 25px;
+      letter-spacing: 0em;
+      text-align: center;
+      opacity: 0.5;
+      padding-bottom: 143px;
+    }
+  }
+
+  .beer-club-wrapper {
+    @include flexCenter(column, nowrap);
+    width: 100%;
+    background: $myellow;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    h1 {
+      color: white;
+      text-transform: uppercase;
+      margin-top: 20px;
+    }
+
+    input {
+      display: block;
+      min-width: 306px;
+      height: 46px;
+      margin: 8px 10px;
+      border-radius: 20px;
+      padding-left: 20px;
+      color: white;
+      background: #f5b83d;
+      opacity: 0.7;
+      border: none;
+      &::placeholder {
+        color: white;
+      }
+    }
+    .btn-submit-beer {
+      color: white;
+      background: black;
+      min-width: 306px;
+      margin: auto;
+      display: flex;
+      justify-content: center;
+      text-transform: uppercase;
+      border-radius: 2em;
+      margin-bottom: 30px;
+      margin-top: 10px;
+      font-family: "Blinker", sans-serif;
+      font-size: 14px;
     }
   }
 
