--- a/Restouran_bar/scss/_mobile.scss
+++ b/Restouran_bar/scss/_mobile.scss
@@ -1,47 +1,67 @@
 @media only screen and (max-width: 768px) {
-  #logo {
-    width: 39.71px;
-    height: 38.05px;
-  }
-
-  .navbar-toggler {
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
-    background-color: $myellow;
-    z-index: 0;
-    position: relative;
-
-    & .navbar-toggler-icon {
-      z-index: 2;
-      color: white;
-      position: relative;
-      right: 9px;
-      width: 30px;
+  .navbar {
+    height: 62px;
+    background-color: black;
+    .container {
+      justify-content: flex-end;
+      background-color: black;
+      .logo {
+        flex-grow: 2;
+      }
     }
   }
-  .btn-weird {
-    width: 38px;
-    height: 38px;
+
+  .navbar-brand {
+    h2 {
+      display: inline;
+      text-transform: uppercase;
+      margin-left: 10px;
+    }
+  }
+  .navbar-dark .navbar-toggler {
+    width: 39px;
+    height: 39px;
     border-radius: 50%;
+    background-color: $myellow;
+    .navbar-toggler-icon {
+      line-height: 1px;
+      left: -8px;
+      right: 0;
+      position: relative;
+      background-image: url("../src/images/6\ social\ media\ icons\ and\ rest\ of\ svg/3-lines.png");
+      transform: scale(0.8);
+    }
+  }
+
+  #dialtone {
+    width: 39px;
+    height: 39px;
+    border-radius: 50%;
+    border: none;
+    background: url("../src/images/6\ social\ media\ icons\ and\ rest\ of\ svg/dial-dots.png")
+      no-repeat;
+    background-position: center;
     background-color: $myellow;
   }
 
   ////////// hero ////////@at-root
 
   .container-mobile {
-    width: 100%;
-    height: 100%;
     margin: 0;
     padding: 0;
     @include flexCenter(column, wrap);
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
     h1 {
-      font-size: 72px;
+      font-size: 90px;
       font-weight: 700;
       color: white;
       position: absolute;
       text-align: center;
       text-transform: uppercase;
+      line-height: 70px;
       span {
         color: $myellow;
       }
@@ -56,7 +76,564 @@
       }
     }
   }
+  ///////// sub hero //////////
 
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    margin-bottom: 30px;
+    .subheader-icons {
+      border: 1px solid lightgrey;
+      border-radius: 15px;
+      max-width: 108px;
+      @include flexCenter(column, wrap);
+      img {
+        background-position: cover;
+        max-width: 80px;
+        max-height: 64px;
+        filter: brightness(40%);
+      }
+    }
+  }
+  //////////////// Menu /////////////
+  #menu {
+    .menu-item-wrap {
+      position: relative;
+      width: 100%;
+      & > img {
+        width: 100%;
+      }
+      .yellow-circle-menu {
+        width: 100%;
+        margin: auto;
+        align-self: center;
+        @include flexCenter(column, nowrap);
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        .yellow-circle {
+          @include flexCenter(column, nowrap);
+          position: absolute;
+          width: 177px;
+          height: 177px;
+          background-color: $myellow;
+          border-radius: 50%;
+
+          h1 {
+            font-size: 40px;
+            font-family: "Teko";
+            text-transform: uppercase;
+            color: white;
+            margin-top: 15px;
+          }
+        }
+      }
+    }
+  }
+  #coctails {
+    margin-bottom: 45px;
+  }
+
+  ////// signature dishes /////@at-root
+  .container-fluid.signature-dishes {
+    .heading-dishes {
+      h1 {
+        font-size: 40px;
+        font-weight: 600;
+        margin-top: 50px;
+        text-transform: uppercase;
+        text-align: center;
+        span {
+          color: $myellow;
+        }
+        hr {
+          width: 50px;
+          border: 2px solid orangered;
+          align-self: center;
+          filter: none;
+          margin: auto;
+          border-radius: 20%;
+          margin-bottom: 50px;
+        }
+      }
+    }
+    .signature-card-wrap {
+      @include flexCenter(column, nowrap);
+      box-shadow: 1px 1px 12px lightgrey;
+      border-radius: 20px;
+
+      h2 {
+        text-align: center;
+        text-transform: uppercase;
+        padding: 25px 0;
+        font-weight: 600;
+      }
+      margin-bottom: 60px;
+    }
+    & button {
+      width: 230px;
+      height: 50px;
+      background: $myellow;
+      color: white;
+      border-radius: 20px;
+      border: none;
+      font-size: 15px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      margin-bottom: 50px;
+    }
+  }
+
+  .vegan-card {
+    @include flexCenter(column, nowrap);
+    background: black;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    h1 {
+      margin-top: 81px;
+      color: white;
+      text-align: center;
+    }
+    hr {
+      width: 50px;
+      border: 2px solid $myellow;
+      align-self: center;
+      filter: none;
+      margin: auto;
+      border-radius: 20%;
+      margin-bottom: 30px;
+      margin-top: 30px;
+    }
+    h6 {
+      color: grey;
+      margin-bottom: 40px;
+      font-weight: 300;
+    }
+    .veg-button > button {
+      border-radius: 20px;
+      width: 130px;
+      height: 30px;
+      background: $myellow;
+      color: white;
+      border: none;
+      margin-bottom: 71px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+  }
+  .menu-button {
+    @include flexCenter(column, nowrap);
+    & > button {
+      width: 330px;
+    }
+  }
+
+  .comment-section {
+    background: #f8f8f8;
+    padding-top: 40px;
+    border: 2px solid white;
+
+    .comment-wrapper {
+      @include flexCenter(column, nowrap);
+      background: white;
+      border-radius: 20px;
+      border: 2px solid white;
+      position: relative;
+      height: 320px;
+      margin-bottom: 30px;
+      .smiley {
+        position: absolute;
+        background-size: cover;
+        width: 220px;
+        height: 220px;
+        margin: auto;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+      }
+      .face-icon {
+        position: absolute;
+        top: 20px;
+        left: 0;
+        right: 0;
+        margin: auto;
+      }
+      .yellow-dots {
+        position: absolute;
+        right: 0;
+        top: 20px;
+      }
+      p {
+        display: inline-block;
+        width: auto;
+        margin-top: 150px;
+        text-align: center;
+        align-self: center;
+        justify-self: center;
+        border-collapse: separate;
+        border-right: 4px solid $myellow;
+        border-left: 4px solid $myellow;
+        padding: 16px 30px;
+        font-size: 25px;
+      }
+      h6 {
+        font-family: "Blinker", sans-serif;
+        text-align: center;
+        font-size: 1em;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 1.6px;
+        color: $myellow;
+      }
+      h2 {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 2em;
+        font-weight: 500;
+        span {
+          color: $myellow;
+        }
+      }
+    }
+  }
+  ///////////////////  night section happening //////////@at-root
+
+  .night-happening .card-wrap-night {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    img {
+      width: 100%;
+    }
+    .yellow-circle-night {
+      display: flex;
+      width: 170px;
+      height: 170px;
+      background: $myellow;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      border-radius: 50%;
+      h3 {
+        margin: auto;
+        text-align: center;
+        text-transform: uppercase;
+        color: white;
+        font-size: 0.8em;
+        letter-spacing: 2px;
+        font-weight: 700;
+        font-family: "Blinker", sans-serif;
+      }
+    }
+    //// dark section ////@at-root
+  }
+  .black-card-nigh-wrap {
+    background-color: black;
+    h1 {
+      padding-top: 150px;
+      text-align: center;
+      color: white;
+      text-transform: uppercase;
+      hr {
+        width: 50px;
+        margin: auto;
+        margin-top: 13px;
+        height: 3px;
+        color: $myellow;
+      }
+      span {
+        color: $myellow;
+        margin-left: 20px;
+      }
+    }
+    p {
+      color: white;
+      margin: 10px 34px 0 34px;
+      font-family: "Bliner", sans-serif;
+      font-size: 15px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 25px;
+      letter-spacing: 0em;
+      text-align: center;
+      opacity: 0.5;
+      padding-bottom: 143px;
+    }
+  }
+
+  .beer-club-wrapper {
+    @include flexCenter(column, nowrap);
+    width: 100%;
+    background: $myellow;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    h1 {
+      color: white;
+      text-transform: uppercase;
+      margin-top: 20px;
+    }
+
+    input {
+      display: block;
+      min-width: 300px;
+      height: 46px;
+      margin: 8px 10px;
+      border-radius: 20px;
+      padding-left: 20px;
+      color: white;
+      background: #f5b83d;
+      opacity: 0.7;
+      border: none;
+      &::placeholder {
+        color: white;
+      }
+    }
+    .btn-submit-beer {
+      color: white;
+      background: black;
+      min-width: 300px;
+      height: 50px;
+      margin: auto;
+      display: flex;
+      justify-content: center;
+      text-transform: uppercase;
+      border-radius: 2em;
+      margin-bottom: 30px;
+      margin-top: 20px;
+      font-family: "Blinker", sans-serif;
+      font-size: 14px;
+      text-align: center;
+      padding: 13px 75px;
+    }
+  }
+  ////// about us //////
+
+  .about-us {
+    width: 99%;
+    margin-top: 25px;
+    position: relative;
+    box-shadow: 1px 1px 8px lightgrey;
+    border-radius: 25px;
+    h1 {
+      text-align: center;
+      padding-top: 22px;
+      text-transform: uppercase;
+      font-size: 55px;
+      span {
+        color: $myellow;
+      }
+    }
+    hr {
+      width: 50px;
+      height: 3px;
+      color: $myellow;
+      opacity: 1;
+      margin: auto;
+    }
+    h4 {
+      text-align: center;
+      margin-top: 25px;
+      font-weight: 400;
+    }
+    p {
+      text-align: center;
+      margin-top: 25px;
+      font-family: "Blinker", sans-serif;
+    }
+    form {
+      margin: auto;
+      text-align: center;
+      position: relative;
+    }
+    .newsletter-button {
+      background-color: $myellow;
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      border: none;
+      position: relative;
+      right: 45px;
+    }
+  }
+
+  .google-map {
+    margin-top: 50px;
+    width: 100%;
+    position: relative;
+    iframe {
+      width: 98%;
+    }
+    .social {
+      @include flexCenter(row, nowrap);
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 50px;
+      .social-img {
+        @include flexCenter(row, nowrap);
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: black;
+        margin: 5px;
+      }
+    }
+  }
+
+  #newsletter {
+    margin-left: 45px;
+    border-radius: 2em;
+    height: 45px;
+    width: 67%;
+    border: none;
+    background-color: #e8e8e8;
+    margin-bottom: 60px;
+    &::placeholder {
+      padding-left: 30px;
+      font-weight: 400;
+      opacity: 0.7;
+    }
+  }
+
+  ///// give us a shout ////@at-root
+  .give-us-shout {
+    @include flexCenter(column, nowrap);
+    width: 100%;
+    background-color: #232323;
+    margin: auto;
+    h3 {
+      color: white;
+      text-align: center;
+      padding: 50px 0 20px 0;
+      text-transform: uppercase;
+      font-family: "Blinker", sans-serif;
+      font-size: 10px;
+    }
+    input {
+      display: block;
+      min-width: 280px;
+      max-width: 382px;
+      height: 45px;
+      border-radius: 2em;
+      margin: 10px;
+      background-color: #393939;
+      color: white;
+      padding: 20px;
+      border: none;
+      &::placeholder {
+        color: white;
+        opacity: 0.7;
+        font-weight: 400;
+      }
+    }
+    .send-message-btn {
+      min-width: 280px;
+      max-width: 382px;
+      height: 45px;
+      border: none;
+      background: $myellow;
+      margin: auto;
+      align-self: center;
+      border-radius: 2em;
+      margin: 10px;
+      color: white;
+      font-family: "Blinker", sans-serif;
+      text-transform: uppercase;
+      font-size: 10px;
+      margin-bottom: 40px;
+    }
+  }
+  #message-shout {
+    height: 110px;
+    &::placeholder {
+      margin: 0;
+      padding: 0;
+      position: relative;
+      bottom: 30px;
+    }
+  }
+
+  /////////////// foooter /////////////////////
+
+  .footer {
+    @include flexCenter(column, nowrap);
+    background: black;
+    color: white;
+    margin: auto;
+    .info-wrap {
+      ul {
+        padding-left: 0;
+        li {
+          list-style: none;
+          text-align: center;
+          padding: 5px;
+          opacity: 0.8;
+
+          &:nth-of-type(1) {
+            padding-top: 40px;
+          }
+          img {
+            margin-right: 15px;
+            background-image: $myellow;
+          }
+        }
+      }
+    }
+    .rest-footer {
+      @include flexCenter(column, nowrap);
+      margin-top: 50px;
+      opacity: 0.8;
+
+      ul {
+        padding-left: 0;
+        li {
+          list-style-type: none;
+          display: inline-block;
+          text-align: center;
+          margin: auto;
+          opacity: 0.9;
+          span {
+            color: $myellow;
+            margin: 20px;
+            position: relative;
+            top: 3px;
+          }
+          a {
+            text-decoration: none;
+            color: white;
+          }
+        }
+      }
+      p {
+        text-transform: uppercase;
+        text-align: center;
+        font-family: "Blinker", sans-serif;
+        font-size: 10px;
+        letter-spacing: 1px;
+        padding-bottom: 20px;
+        span {
+          color: $myellow;
+        }
+        .hearth {
+          color: red;
+          transform: scale(0.2);
+          margin: 1px;
+        }
+      }
+    }
+  }
+
+  hr {
+    opacity: 1;
+  }
   ////end of line/////
 }
 ////end of line/////
