--- a/scss/style.css
+++ b/scss/style.css
@@ -8,6 +8,21 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .navbar {
+    height: 62px;
+    background-color: black;
+  }
+  .navbar .container {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    background-color: black;
+  }
+  .navbar .container .logo {
+    -webkit-box-flex: 2;
+        -ms-flex-positive: 2;
+            flex-grow: 2;
+  }
   .navbar-brand h2 {
     display: inline;
     text-transform: uppercase;
@@ -20,16 +35,22 @@
     background-color: #f2a60c;
   }
   .navbar-dark .navbar-toggler .navbar-toggler-icon {
+    line-height: 1px;
     left: -8px;
     right: 0;
     position: relative;
+    background-image: url("../src/images/6 social media icons and rest of svg/3-lines.png");
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
   }
   #dialtone {
     width: 39px;
     height: 39px;
     border-radius: 50%;
-    background-color: #f2a60c;
     border: none;
+    background: url("../src/images/6 social media icons and rest of svg/dial-dots.png") no-repeat;
+    background-position: center;
+    background-color: #f2a60c;
   }
   .container-mobile {
     margin: 0;
@@ -417,6 +438,9 @@
     height: 100%;
     position: relative;
   }
+  .night-happening .card-wrap-night img {
+    width: 100%;
+  }
   .night-happening .card-wrap-night .yellow-circle-night {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -506,7 +530,7 @@
   }
   .beer-club-wrapper input {
     display: block;
-    min-width: 306px;
+    min-width: 300px;
     height: 46px;
     margin: 8px 10px;
     border-radius: 20px;
@@ -531,7 +555,8 @@
   .beer-club-wrapper .btn-submit-beer {
     color: white;
     background: black;
-    min-width: 306px;
+    min-width: 300px;
+    height: 50px;
     margin: auto;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -542,9 +567,346 @@
     text-transform: uppercase;
     border-radius: 2em;
     margin-bottom: 30px;
-    margin-top: 10px;
+    margin-top: 20px;
     font-family: "Blinker", sans-serif;
     font-size: 14px;
+    text-align: center;
+    padding: 13px 75px;
+  }
+  .about-us {
+    width: 99%;
+    margin-top: 25px;
+    position: relative;
+    -webkit-box-shadow: 1px 1px 8px lightgrey;
+            box-shadow: 1px 1px 8px lightgrey;
+    border-radius: 25px;
+  }
+  .about-us h1 {
+    text-align: center;
+    padding-top: 22px;
+    text-transform: uppercase;
+    font-size: 55px;
+  }
+  .about-us h1 span {
+    color: #f2a60c;
+  }
+  .about-us hr {
+    width: 50px;
+    height: 3px;
+    color: #f2a60c;
+    opacity: 1;
+    margin: auto;
+  }
+  .about-us h4 {
+    text-align: center;
+    margin-top: 25px;
+    font-weight: 400;
+  }
+  .about-us p {
+    text-align: center;
+    margin-top: 25px;
+    font-family: "Blinker", sans-serif;
+  }
+  .about-us form {
+    margin: auto;
+    text-align: center;
+    position: relative;
+  }
+  .about-us .newsletter-button {
+    background-color: #f2a60c;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    border: none;
+    position: relative;
+    right: 45px;
+  }
+  .google-map {
+    margin-top: 50px;
+    width: 100%;
+    position: relative;
+  }
+  .google-map iframe {
+    width: 98%;
+  }
+  .google-map .social {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 50px;
+  }
+  .google-map .social .social-img {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: black;
+    margin: 5px;
+  }
+  #newsletter {
+    margin-left: 45px;
+    border-radius: 2em;
+    height: 45px;
+    width: 67%;
+    border: none;
+    background-color: #e8e8e8;
+    margin-bottom: 60px;
+  }
+  #newsletter::-webkit-input-placeholder {
+    padding-left: 30px;
+    font-weight: 400;
+    opacity: 0.7;
+  }
+  #newsletter:-ms-input-placeholder {
+    padding-left: 30px;
+    font-weight: 400;
+    opacity: 0.7;
+  }
+  #newsletter::-ms-input-placeholder {
+    padding-left: 30px;
+    font-weight: 400;
+    opacity: 0.7;
+  }
+  #newsletter::placeholder {
+    padding-left: 30px;
+    font-weight: 400;
+    opacity: 0.7;
+  }
+  .give-us-shout {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    width: 100%;
+    background-color: #232323;
+    margin: auto;
+  }
+  .give-us-shout h3 {
+    color: white;
+    text-align: center;
+    padding: 50px 0 20px 0;
+    text-transform: uppercase;
+    font-family: "Blinker", sans-serif;
+    font-size: 10px;
+  }
+  .give-us-shout input {
+    display: block;
+    min-width: 280px;
+    max-width: 382px;
+    height: 45px;
+    border-radius: 2em;
+    margin: 10px;
+    background-color: #393939;
+    color: white;
+    padding: 20px;
+    border: none;
+  }
+  .give-us-shout input::-webkit-input-placeholder {
+    color: white;
+    opacity: 0.7;
+    font-weight: 400;
+  }
+  .give-us-shout input:-ms-input-placeholder {
+    color: white;
+    opacity: 0.7;
+    font-weight: 400;
+  }
+  .give-us-shout input::-ms-input-placeholder {
+    color: white;
+    opacity: 0.7;
+    font-weight: 400;
+  }
+  .give-us-shout input::placeholder {
+    color: white;
+    opacity: 0.7;
+    font-weight: 400;
+  }
+  .give-us-shout .send-message-btn {
+    min-width: 280px;
+    max-width: 382px;
+    height: 45px;
+    border: none;
+    background: #f2a60c;
+    margin: auto;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    border-radius: 2em;
+    margin: 10px;
+    color: white;
+    font-family: "Blinker", sans-serif;
+    text-transform: uppercase;
+    font-size: 10px;
+    margin-bottom: 40px;
+  }
+  #message-shout {
+    height: 110px;
+  }
+  #message-shout::-webkit-input-placeholder {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    bottom: 30px;
+  }
+  #message-shout:-ms-input-placeholder {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    bottom: 30px;
+  }
+  #message-shout::-ms-input-placeholder {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    bottom: 30px;
+  }
+  #message-shout::placeholder {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    bottom: 30px;
+  }
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    background: black;
+    color: white;
+    margin: auto;
+  }
+  .footer .info-wrap ul {
+    padding-left: 0;
+  }
+  .footer .info-wrap ul li {
+    list-style: none;
+    text-align: center;
+    padding: 5px;
+    opacity: 0.8;
+  }
+  .footer .info-wrap ul li:nth-of-type(1) {
+    padding-top: 40px;
+  }
+  .footer .info-wrap ul li img {
+    margin-right: 15px;
+    background-image: #f2a60c;
+  }
+  .footer .rest-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    margin-top: 50px;
+    opacity: 0.8;
+  }
+  .footer .rest-footer ul {
+    padding-left: 0;
+  }
+  .footer .rest-footer ul li {
+    list-style-type: none;
+    display: inline-block;
+    text-align: center;
+    margin: auto;
+    opacity: 0.9;
+  }
+  .footer .rest-footer ul li span {
+    color: #f2a60c;
+    margin: 20px;
+    position: relative;
+    top: 3px;
+  }
+  .footer .rest-footer ul li a {
+    text-decoration: none;
+    color: white;
+  }
+  .footer .rest-footer p {
+    text-transform: uppercase;
+    text-align: center;
+    font-family: "Blinker", sans-serif;
+    font-size: 10px;
+    letter-spacing: 1px;
+    padding-bottom: 20px;
+  }
+  .footer .rest-footer p span {
+    color: #f2a60c;
+  }
+  .footer .rest-footer p .hearth {
+    color: red;
+    -webkit-transform: scale(0.2);
+            transform: scale(0.2);
+    margin: 1px;
   }
   hr {
     opacity: 1;
