--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,4 +1,16 @@
 @media only screen and (max-width: 768px) {
+  .navbar {
+    height: 62px;
+    background-color: black;
+    .container {
+      justify-content: flex-end;
+      background-color: black;
+      .logo {
+        flex-grow: 2;
+      }
+    }
+  }
+
   .navbar-brand {
     h2 {
       display: inline;
@@ -12,9 +24,12 @@
     border-radius: 50%;
     background-color: $myellow;
     .navbar-toggler-icon {
+      line-height: 1px;
       left: -8px;
       right: 0;
       position: relative;
+      background-image: url("../src/images/6\ social\ media\ icons\ and\ rest\ of\ svg/3-lines.png");
+      transform: scale(0.8);
     }
   }
 
@@ -22,8 +37,11 @@
     width: 39px;
     height: 39px;
     border-radius: 50%;
-    background-color: $myellow;
     border: none;
+    background: url("../src/images/6\ social\ media\ icons\ and\ rest\ of\ svg/dial-dots.png")
+      no-repeat;
+    background-position: center;
+    background-color: $myellow;
   }
 
   ////////// hero ////////@at-root
@@ -288,6 +306,9 @@
     width: 100%;
     height: 100%;
     position: relative;
+    img {
+      width: 100%;
+    }
     .yellow-circle-night {
       display: flex;
       width: 170px;
@@ -362,7 +383,7 @@
 
     input {
       display: block;
-      min-width: 306px;
+      min-width: 300px;
       height: 46px;
       margin: 8px 10px;
       border-radius: 20px;
@@ -378,16 +399,235 @@
     .btn-submit-beer {
       color: white;
       background: black;
-      min-width: 306px;
+      min-width: 300px;
+      height: 50px;
       margin: auto;
       display: flex;
       justify-content: center;
       text-transform: uppercase;
       border-radius: 2em;
       margin-bottom: 30px;
-      margin-top: 10px;
+      margin-top: 20px;
       font-family: "Blinker", sans-serif;
       font-size: 14px;
+      text-align: center;
+      padding: 13px 75px;
+    }
+  }
+  ////// about us //////
+
+  .about-us {
+    width: 99%;
+    margin-top: 25px;
+    position: relative;
+    box-shadow: 1px 1px 8px lightgrey;
+    border-radius: 25px;
+    h1 {
+      text-align: center;
+      padding-top: 22px;
+      text-transform: uppercase;
+      font-size: 55px;
+      span {
+        color: $myellow;
+      }
+    }
+    hr {
+      width: 50px;
+      height: 3px;
+      color: $myellow;
+      opacity: 1;
+      margin: auto;
+    }
+    h4 {
+      text-align: center;
+      margin-top: 25px;
+      font-weight: 400;
+    }
+    p {
+      text-align: center;
+      margin-top: 25px;
+      font-family: "Blinker", sans-serif;
+    }
+    form {
+      margin: auto;
+      text-align: center;
+      position: relative;
+    }
+    .newsletter-button {
+      background-color: $myellow;
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      border: none;
+      position: relative;
+      right: 45px;
+    }
+  }
+
+  .google-map {
+    margin-top: 50px;
+    width: 100%;
+    position: relative;
+    iframe {
+      width: 98%;
+    }
+    .social {
+      @include flexCenter(row, nowrap);
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 50px;
+      .social-img {
+        @include flexCenter(row, nowrap);
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: black;
+        margin: 5px;
+      }
+    }
+  }
+
+  #newsletter {
+    margin-left: 45px;
+    border-radius: 2em;
+    height: 45px;
+    width: 67%;
+    border: none;
+    background-color: #e8e8e8;
+    margin-bottom: 60px;
+    &::placeholder {
+      padding-left: 30px;
+      font-weight: 400;
+      opacity: 0.7;
+    }
+  }
+
+  ///// give us a shout ////@at-root
+  .give-us-shout {
+    @include flexCenter(column, nowrap);
+    width: 100%;
+    background-color: #232323;
+    margin: auto;
+    h3 {
+      color: white;
+      text-align: center;
+      padding: 50px 0 20px 0;
+      text-transform: uppercase;
+      font-family: "Blinker", sans-serif;
+      font-size: 10px;
+    }
+    input {
+      display: block;
+      min-width: 280px;
+      max-width: 382px;
+      height: 45px;
+      border-radius: 2em;
+      margin: 10px;
+      background-color: #393939;
+      color: white;
+      padding: 20px;
+      border: none;
+      &::placeholder {
+        color: white;
+        opacity: 0.7;
+        font-weight: 400;
+      }
+    }
+    .send-message-btn {
+      min-width: 280px;
+      max-width: 382px;
+      height: 45px;
+      border: none;
+      background: $myellow;
+      margin: auto;
+      align-self: center;
+      border-radius: 2em;
+      margin: 10px;
+      color: white;
+      font-family: "Blinker", sans-serif;
+      text-transform: uppercase;
+      font-size: 10px;
+      margin-bottom: 40px;
+    }
+  }
+  #message-shout {
+    height: 110px;
+    &::placeholder {
+      margin: 0;
+      padding: 0;
+      position: relative;
+      bottom: 30px;
+    }
+  }
+
+  /////////////// foooter /////////////////////
+
+  .footer {
+    @include flexCenter(column, nowrap);
+    background: black;
+    color: white;
+    margin: auto;
+    .info-wrap {
+      ul {
+        padding-left: 0;
+        li {
+          list-style: none;
+          text-align: center;
+          padding: 5px;
+          opacity: 0.8;
+
+          &:nth-of-type(1) {
+            padding-top: 40px;
+          }
+          img {
+            margin-right: 15px;
+            background-image: $myellow;
+          }
+        }
+      }
+    }
+    .rest-footer {
+      @include flexCenter(column, nowrap);
+      margin-top: 50px;
+      opacity: 0.8;
+
+      ul {
+        padding-left: 0;
+        li {
+          list-style-type: none;
+          display: inline-block;
+          text-align: center;
+          margin: auto;
+          opacity: 0.9;
+          span {
+            color: $myellow;
+            margin: 20px;
+            position: relative;
+            top: 3px;
+          }
+          a {
+            text-decoration: none;
+            color: white;
+          }
+        }
+      }
+      p {
+        text-transform: uppercase;
+        text-align: center;
+        font-family: "Blinker", sans-serif;
+        font-size: 10px;
+        letter-spacing: 1px;
+        padding-bottom: 20px;
+        span {
+          color: $myellow;
+        }
+        .hearth {
+          color: red;
+          transform: scale(0.2);
+          margin: 1px;
+        }
+      }
     }
   }
 
